# Refine

./: .gitignore  CMakeLists.txt  Demo.cpp  Demo.h  main.cpp
Refine/Common/: Common.cpp  Common.h  Debug.cpp  Debug.h  FlatTable.h
Refine/Geometry/: Adjacency.cpp  Adjacency.h  Common.cpp  Common.h  MeshPoly.cpp  MeshPoly.h  MeshTri.cpp  MeshTri.h  PolyMesh.cpp  PolyMesh.h  TriMesh.cpp  TriMesh.h
Refine/IO/: Obj.cpp  Obj.h
Refine/PBD/: Constraints.cpp  Constraints.h  Forces.cpp  Forces.h  ProblemPositional.cpp  ProblemPositional.h
Refine/Rendering/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Common.cpp  Common.h  GlBuffer.cpp  GlBuffer.h  GlMesh.cpp  GlMesh.h  GlShader.cpp  GlShader.h
Refine/Spatial/: AABB.h
data/shaders/: main.frag  main.vert
